--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
     font-size: 15px;
-    color: #E6F1FF;
+    color: #8892B0;
 }
 
 body{
@@ -79,6 +79,49 @@ body{
     margin-top: 50px;
 }
 
-#about_section span{
-
+#about_section{
+    height: 90vh
 }
+/* #about_me h3{
+    font-family: Roboto Mono;
+    font-size: 25px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;  
+}
+#about_me h2{
+    color:#CCD6F6;
+    display: flex;
+    align-items: center;
+}
+#about_me p{
+    font-size:20px;
+} */
+#about_me_img{
+    background: linear-gradient(0deg, #5AE7C8, #5AE7C8);
+    background-blend-mode: hue, normal;
+    border-radius: 10px;
+    position: relative;
+}
+#about-me-img img {
+    filter: contrast(85%) hue-rotate(127deg) invert(12%) saturate(113%) sepia(10%);
+  }
+  
+  #about-me .h3, h3 {
+    color: #5AE7C8;
+  }
+  
+  #about-me .h3 strong{
+    color: #CCD6F6;
+  }
+  
+  #about-me-img :hover {
+    filter: none;
+  }
+  
+  #about-me-text p {
+    font-size: 20px;
+    color: #8892B0;
+  }
+  
+  
