--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -14,7 +14,7 @@
 /* SETTING THE STYLE FOR BODY SECTION. */
 body{
     background: #0A192F;
-    min-width: 300px;
+    min-width: 320px;
     height: auto;
     overflow-x: hidden;
     overflow-y: hidden;
@@ -188,7 +188,8 @@ body{
     filter: grayscale(100%);
     /* filter: sepia(100%); */
     cursor: pointer;
-    box-shadow: 10px 10px grey;
+    border-radius: 5px;
+    box-shadow: 10px 10px gray;
 }
 .filtered-image:hover{
     filter: none;
@@ -230,7 +231,7 @@ body{
 
 .custom-navbar-nav li a{
     color: #E6F1FF;
-    margin-right: 20px;
+    margin-right: 10px;
     font-size: 13px;
 }
 .custom-navbar-nav li a:hover{
@@ -239,7 +240,7 @@ body{
 
 .custom-navbar-nav li a span{
     color: #5AE7C8;
-    margin-right: 5px;
+    /* margin-right: 15px; */
     font-size: 13px;
 }
 
@@ -252,9 +253,10 @@ body{
     background: url('../images/background.png');    /* Importing background image. */
     /* height: 100%; Actual height of the image. */
     /* background-position: center; Center the image */
-    background-repeat: repeat-y; /* Repeat image in y direction. */
+    background-repeat: repeat-y space; /* Repeat image in y direction. */
     /* width: 100%; */
     background-size: contain; /*Resize the background image to cover the entire container*/
+    margin-top: -50px;
 }
 
 .contents-class div{
@@ -294,6 +296,7 @@ body{
     border-left: 5px solid #46B3A2;
     border-bottom: 1px solid rgba(0, 0, 0, .5);
     padding-left: 20px;
+    width: 50vw;
 }
 
 .nav-pills .nav-link.active.tab-close, .nav-pills .show > .nav-link.tab-close {
@@ -303,6 +306,7 @@ body{
     border-left: 5px solid #7992A1;
     border-bottom: 1px solid rgba(0, 0, 0, .3);
     padding-left: 20px;
+    width: 50vw;
 }
 
 .tab-pane {
@@ -348,9 +352,9 @@ body{
 /* PROJECTS SECTION STYLE STARTS. */
 .project {
     margin-top: 30px;
-  }
+}
   
-  .project-text {
+.project-text {
     color: #CCD6F6;
     width: 100%;
     position: absolute;
@@ -361,17 +365,18 @@ body{
     padding-right: 0;
     font-size: 15px;
     line-height: 30px;
-  }
+}
     
-  .btn.btn-img {
+.btn.btn-img {
     color: white;
     font-size: 21px;
     padding: 0px 15px 2px 0px;
     float: right;
-  }
-  img .project{
-    filter:grayscale(100%);
-  }
+}
+
+img .project{
+    filter: grayscale(100%);
+}
 /* PROJECTS SECTION STYLE ENDS. */
 
 /* PUBLICATIONS SECTION STYLE STARTS. */
@@ -383,6 +388,7 @@ body{
 #publications .card{
     background-color: #0A192F;
     height: 300px;
+    width: 60vw;
     padding: 5px;
     border: solid 1px rgba(16, 41, 59, 1);
     box-shadow: 2px 2px rgba(136, 146, 175, 0.5);
@@ -529,14 +535,7 @@ body{
 
 /* TO MANGE RESPONSIVENESS. */
 
-@media screen and (max-width: 1200px){
-    
-    /* ALTERING COLOR. */
-    .navbar-collapse {
-        background-color: #172A45;
-        text-align: right;
-        padding: 10px;
-    }    
+@media screen and (max-width: 1250px){
 
     /* MAKING SMALL SCREEN LINKS VISIBLE. */
     #small_screen_links{
@@ -544,7 +543,7 @@ body{
     }
 
     /* MAKING LARGE SCREEN LINKS INVISIBLE. */
-    
+
     /* SOCIAL MEDIA LINKS. */
     #large_screen_links{
         visibility: hidden;
@@ -554,6 +553,17 @@ body{
     #large_screen_email{
         visibility: hidden;
     }
+
+}
+
+@media screen and (max-width: 991px){
+    
+    /* ALTERING COLOR. */
+    .navbar-collapse {
+        background-color: #172A45;
+        text-align: right;
+        padding: 10px;
+    }    
 
     /* FOR HUGE TEXT. */
     .text-huge{
@@ -627,15 +637,15 @@ body{
 
 }
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 768px){
 
     /* FOR HUGE TEXT. */
     .text-huge{
-        font-size: 42px;
+        font-size: 30px;
         font-weight: bold;
         margin: 0;
         padding: 0;
-        word-spacing: -20px;
+        word-spacing: normal;
     }
 
     /* FOR BIG TEXT. */
@@ -644,7 +654,7 @@ body{
         font-weight: 900;
         margin: 0;
         padding: 0;
-        word-spacing: -20px;
+        word-spacing: normal;
     }
 
     /* FOR HEADING TEXT. */
@@ -699,5 +709,124 @@ body{
         word-spacing: 2px;
     }
     
+
+    /* FOR SMALL NEON COLORED BUTTON. */
+    .neon-btn-sm{
+        background: transparent;            /* Transparent background to match the surrounding. */
+        color: #5AE7C8;                 /* Text color. */
+        border: solid 1px #5AE7C8;      /* Border color. */
+        /* padding: 5px;             Padding.  */
+        border-radius: 5px;             /* Border radius. */
+        height: auto;                   /* Height of the button. */
+        cursor: pointer;                /* To display pointer curosor when hovered. */
+        font-size: 12px;
+    }
+
+    /* FOR LARGE NEON COLORED BUTTON. */
+    .neon-btn-lg{
+        background: transparent;            /* Transparent background to match the surrounding. */
+        color: #5AE7C8;                 /* Text color. */
+        border: solid 1px #5AE7C8;      /* Border color. */
+        padding: 10px;             /* Padding. */ 
+        border-radius: 5px;             /* Border radius. */
+        height: auto;                   /* Height of the button. */
+        cursor: pointer;                /* To display pointer curosor when hovered. */
+        font-size: 12px;
+    }
+
+    /* PAGE CONTENTS STYLE. */
+    .page-contents{
+        padding: 100px 10px;
+        margin-top: 50px;
+        margin-bottom: 0px;
+    }
+
+    /* PAGE CONTENTS HEADING. */
+    .page-contents-heading{
+        display: flex;
+        width: 100%;
+    }
+
+    #about_section .page-contents-heading{
+        margin-bottom: 20px;   
+    }
+
+}
+
+@media screen and (max-width: 576px){
+
+    /* FOR HUGE TEXT. */
+    .text-huge{
+        font-size: 30px;
+        font-weight: bold;
+        margin: 0;
+        padding: 0;
+        word-spacing: normal;
+    }
+
+    /* FOR BIG TEXT. */
+    .text-big{
+        font-size: 32px;
+        font-weight: 900;
+        margin: 0;
+        padding: 0;
+        word-spacing: normal;
+    }
+
+    /* FOR HEADING TEXT. */
+    .text-heading{
+        font-size: 18px;
+        font-weight: 600;
+        margin: 5px 0;
+        padding: 0;
+    }
+    /* FOR HEADING SIZED NUMBERS. */
+    .number-heading{
+        font-size: 16px;
+        font-weight: 600;
+        margin: 5px 0;
+        padding: 0;
+    }
+
+    /* FOR NORMAL SIZED TEXT. */
+    .text-normal{
+        font-size: 12px;
+        font-weight: 400;
+        margin: 0;
+        padding: 0;
+        letter-spacing: 1px;
+        word-spacing: 2px;
+    }
+    /* FOR NORMAL SIZED NUMBERS. */
+    .number-normal{
+        font-size: 10px;
+        font-weight: 400;
+        margin: 0;
+        padding: 0;
+        letter-spacing: 1px;
+        word-spacing: 2px;
+    }
+
+    /* FOR SMALL SIZED TEXT. */
+    .text-small{
+        font-size: 10px;
+        font-weight: 400;
+        margin: 0;
+        padding: 0;
+        word-spacing: 2px;
+    }
+
+    /* FOR TINY TEXT. */
+    .text-tiny{
+        font-size: 8px;
+        font-weight: 200;
+        margin: 0;
+        padding: 0;
+        word-spacing: 2px;
+    }
+    
+    #about_section .page-contents-heading{
+        margin-bottom: 0px;   
+    }
 
 }
